tests/en/errors/op_mismatch.salam
// EXPECT: E021
func main: x auto = true + false end
